# omega.hpp

./: .gitmodules  CMakeLists.txt  README.md  driver.cpp  omega.hpp
Lib/Include/omega/: omega.hpp
Test/: TestAll.hpp  TestVarious.hpp  main.cpp
